tests/baselines/reference/noImplicitAnyLoopCrash(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
noImplicitAnyLoopCrash.ts(4,16): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
noImplicitAnyLoopCrash.ts(4,19): error TS2461: Type 'number' is not an array type.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== noImplicitAnyLoopCrash.ts (2 errors) ====
    let foo = () => {};
    let bar;
    while (1) {
        bar = ~foo(...bar);
                   ~~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
                      ~~~
!!! error TS2461: Type 'number' is not an array type.
    }
    